--- a/src/half_horizontal.liquid
+++ b/src/half_horizontal.liquid
@@ -1,115 +1,72 @@
-<div class="layout layout--col h--full pb--10">
+<div class="layout layout--col gap--space-between">
+  <div class="grid h-full">
 
-  <!-- Electricity Section -->
-  <div class="grid">
-    <div class="row">
-      {% render 'price_card'
-        , data: electricity
-        , label_now: "Price electricity now"
-        , label_avg: "Avg electricity price"
-        , resource_name: "Electricity"
-        , bar_color: "bg--black"
-        , show_indicator: false
-        , current_size: "small"
+    <!-- Left Column: Stats & Legends -->
+    <div class="col--span-3 col gap--space-between">
+
+      <!-- Row 1: Electricity (Standard Size) -->
+      <div class="grid grid--cols-2 gap--[9px]" data-adjust-grid-gaps="false">
+        {% render 'mini_stat', 
+          data: electricity, 
+          label: "Price electricity now", 
+          type: 'current'
+        %}
+        {% render 'mini_stat', 
+          data: electricity, 
+          label: "Avg electricity price", 
+          type: 'avg'
+        %}
+      </div>
+
+      <div class="divider"></div>
+
+      <!-- Row 2: Gas (Small Size) -->
+      <div class="grid grid--cols-2">
+        {% render 'mini_stat', 
+          data: gas, 
+          label: "Price gas now", 
+          type: 'current',
+          size: 'xsmall'
+        %}
+        {% render 'mini_stat', 
+          data: gas, 
+          label: "Avg gas price", 
+          type: 'avg',
+          size: 'xsmall'
+        %}
+      </div>
+
+      <div class="divider"></div>
+
+      <!-- Row 3: Legends -->
+      <div class="grid grid--cols-2">
+        {% render 'legend_item', 
+          label: "Electricity", 
+          color: "bg--black" 
+        %}
+        {% render 'legend_item', 
+          label: "Gas", 
+          color: "bg--gray-5" 
+        %}
+      </div>
+    </div>
+
+    <!-- Right Column: Chart -->
+    <div class="col--span-3 col gap--space-between">
+      <!-- Import chart scripts manually since this view has no <head> -->
+      {% render 'chart_assets' %}
+
+      <!-- Render the shared chart component -->
+      {% render 'energy_chart'
+        , id: "energy-chart"
+        , electricity: electricity
+        , gas: gas
+        , variant: "full"
       %}
     </div>
   </div>
-
-  <div class="border--h-5 w--full"></div>
-
-  <!-- Gas Section -->
-  <div class="grid">
-    <div class="row">
-      {% render 'price_card'
-        , data: gas
-        , label_now: "Price gas now"
-        , label_avg: "Avg gas price"
-        , resource_name: "Gas"
-        , bar_color: "bg--gray-5"
-        , show_indicator: false
-        , current_size: "small"
-      %}
-    </div>
-  </div>
-
-  <!-- Chart Container -->
-  <div id="energy-chart" class="w--full flex--grow"></div>
-
-  <script type="text/javascript">
-            {% assign now = "now" | date: "%Y-%m-%dT%H:00:00.000Z" %}
-
-            // Use the shared component to generate data arrays
-            var electricityData = {% render 'js_time_series', data: electricity, start_time: now %};
-            var gasData = {% render 'js_time_series', data: gas, start_time: now %};
-
-            var formattedData = [
-              { name: "Electricity", data: electricityData },
-              { name: "Gas", data: gasData }
-            ];
-
-            Highcharts.chart("energy-chart", {
-              chart: {
-                type: "spline",
-                height: null,
-                width: null,
-                animation: false,
-                spacing: [10, 10, 5, 10],
-                backgroundColor: 'transparent'
-              },
-              title: { text: null },
-              plotOptions: {
-                series: {
-                  animation: false,
-                  enableMouseTracking: false,
-                  states: { hover: { enabled: false } },
-                  marker: { enabled: false }
-                }
-              },
-              series: [{
-                data: formattedData[0].data,
-                lineWidth: 4,
-                color: "#000000",
-                name: formattedData[0].name,
-                zIndex: 2
-              }, {
-                data: formattedData[1].data,
-                lineWidth: 5,
-                name: formattedData[1].name,
-                zIndex: 1,
-                color: {
-                  pattern: {
-                    image: "https://usetrmnl.com/images/grayscale/gray-5.png",
-                    width: 12,
-                    height: 12
-                  }
-                }
-              }],
-              tooltip: { enabled: false },
-              legend: { enabled: false },
-              yAxis: {
-                labels: { style: { fontSize: "16px", color: "#000000" } },
-                gridLineDashStyle: "shortdot",
-                gridLineWidth: 1,
-                gridLineColor: "#000000",
-                tickAmount: 5,
-                title: { text: null }
-              },
-              xAxis: {
-                type: "datetime",
-                labels: { style: { fontSize: "16px", color: "#000000" }, padding: 5, y: 25 },
-                lineWidth: 0,
-                gridLineDashStyle: "dot",
-                tickWidth: 1,
-                tickLength: 0,
-                gridLineWidth: 1,
-                gridLineColor: "#000000",
-                tickPixelInterval: 120,
-                title: { text: null }
-              },
-              credits: { enabled: false }
-            });
-  </script>
 </div>
+
 <div class="title_bar">
   <img class="image" src="https://usetrmnl.com/images/plugins/weather/wi-lightning.svg">
   <span class="title">Frank Energie</span>
