--- a/src/quadrant.liquid
+++ b/src/quadrant.liquid
@@ -1,117 +1,61 @@
-<div class="layout layout--col h--full pb--10">
+{% render 'head_assets' %}
 
-  <!-- Electricity Section -->
-  <div class="grid">
-    <div class="row">
-      {% render 'price_card'
-        , data: electricity
-        , label_now: "Price elec now"
-        , label_avg: "Elec today"
-        , resource_name: "Electricity"
-        , bar_color: "bg--black"
-        , show_indicator: false
-        , current_size: "small"
+<div class="layout layout--col gap--space-between">
+
+  <!-- Top Row: Electricity Now + Sparkline Chart -->
+  <div class="grid grid--cols-2 gap--[9px]" data-adjust-grid-gaps="false">
+    {% render 'mini_stat'
+      , data: electricity
+      , label: "Elec Now"
+      , type: "current"
+      , size: "medium"
+    %}
+    <div class="item">
+      {% render 'energy_chart'
+        , id: "quadrant-chart"
+        , electricity: electricity
+        , gas: gas
+        , variant: "sparkline"
       %}
     </div>
   </div>
 
-  <div class="border--h-5 w--full"></div>
+  <div class="divider"></div>
 
-  <!-- Gas Section -->
-  <div class="grid">
-    <div class="row">
-      {% render 'price_card'
-        , data: gas
-        , label_now: "Price gas now"
-        , label_avg: "Gas today"
-        , resource_name: "Gas"
-        , bar_color: "bg--gray-5"
-        , show_indicator: false
-        , current_size: "small"
-      %}
-    </div>
+  <!-- Middle Row: Gas Now + Gas Average -->
+  <div class="grid grid--cols-2">
+    {% render 'mini_stat'
+      , data: gas
+      , label: "Gas Now"
+      , type: "current"
+      , size: "xsmall"
+    %}
+    {% render 'mini_stat'
+      , data: gas
+      , label: "Gas Avg"
+      , type: "avg"
+      , size: "xsmall"
+    %}
   </div>
 
-  <!-- Chart Container -->
-  <div id="energy-chart" class="w--full flex--grow"></div>
+  <div class="divider"></div>
 
-  <script type="text/javascript">
-            {% assign now = "now" | date: "%Y-%m-%dT%H:00:00.000Z" %}
+  <!-- Bottom Row: Legends/Indicators -->
+  <div class="grid grid grid--cols-2">
+    {% render 'legend_item'
+      , label: "Electricity"
+      , color: "bg--black"
+    %}
+    {% render 'legend_item'
+      , label: "Gas"
+      , color: "bg--gray-5"
+    %}
+  </div>
 
-            // Use the shared component to generate data arrays
-            var electricityData = {% render 'js_time_series', data: electricity, start_time: now %};
-            var gasData = {% render 'js_time_series', data: gas, start_time: now %};
-
-            var formattedData = [
-              { name: "Electricity", data: electricityData },
-              { name: "Gas", data: gasData }
-            ];
-
-            Highcharts.chart("energy-chart", {
-              chart: {
-                type: "spline",
-                height: null,
-                width: null,
-                animation: false,
-                spacing: [10, 10, 5, 10],
-                backgroundColor: 'transparent'
-              },
-              title: { text: null },
-              plotOptions: {
-                series: {
-                  animation: false,
-                  enableMouseTracking: false,
-                  states: { hover: { enabled: false } },
-                  marker: { enabled: false }
-                }
-              },
-              series: [{
-                data: formattedData[0].data,
-                lineWidth: 4,
-                color: "#000000",
-                name: formattedData[0].name,
-                zIndex: 2
-              }, {
-                data: formattedData[1].data,
-                lineWidth: 5,
-                name: formattedData[1].name,
-                zIndex: 1,
-                color: {
-                  pattern: {
-                    image: "https://usetrmnl.com/images/grayscale/gray-5.png",
-                    width: 12,
-                    height: 12
-                  }
-                }
-              }],
-              tooltip: { enabled: false },
-              legend: { enabled: false },
-              yAxis: {
-                labels: { style: { fontSize: "16px", color: "#000000" } },
-                gridLineDashStyle: "shortdot",
-                gridLineWidth: 1,
-                gridLineColor: "#000000",
-                tickAmount: 5,
-                title: { text: null }
-              },
-              xAxis: {
-                type: "datetime",
-                labels: { style: { fontSize: "16px", color: "#000000" }, padding: 5, y: 25 },
-                lineWidth: 0,
-                gridLineDashStyle: "dot",
-                tickWidth: 1,
-                tickLength: 0,
-                gridLineWidth: 1,
-                gridLineColor: "#000000",
-                tickPixelInterval: 120,
-                title: { text: null }
-              },
-              credits: { enabled: false }
-            });
-  </script>
 </div>
+
 <div class="title_bar">
   <img class="image" src="https://usetrmnl.com/images/plugins/weather/wi-lightning.svg">
   <span class="title">Frank Energie</span>
-  <span class="instance">Energy Prices Chart</span>
+  <span class="instance">Energy Prices</span>
 </div>
