--- a/src/half_vertical.liquid
+++ b/src/half_vertical.liquid
@@ -33,109 +33,13 @@
   </div>
 
   <!-- Chart Container -->
-  <div id="energy-chart" class="w--full flex--grow"></div>
-  
-  <script type="text/javascript">
-            // Pass raw data from Liquid (Manually serialized)
-            var rawElectricity = [
-              {% for item in electricity %}
-                { "from": "{{ item.from }}", "till": "{{ item.till }}", "total_price": {{ item.total_price }} }
-                {% unless forloop.last %},{% endunless %}
-              {% endfor %}
-            ];
-            
-            var rawGas = [
-              {% for item in gas %}
-                { "from": "{{ item.from }}", "till": "{{ item.till }}", "total_price": {{ item.total_price }} }
-                {% unless forloop.last %},{% endunless %}
-              {% endfor %}
-            ];
-
-            // Filter start time
-            var startTime = new Date("{{ 'now' | date: '%Y-%m-%dT%H:00:00.000Z' }}").getTime();
-
-            function transformData(data) {
-              if (!data) return [];
-              return data
-                .filter(function(item) { return new Date(item.from).getTime() >= startTime; })
-                .map(function(item) {
-                  return [
-                    new Date(item.till).getTime(),
-                    parseFloat(item.total_price.toFixed(2))
-                  ];
-                });
-            }
-
-            var electricityData = transformData(rawElectricity);
-            var gasData = transformData(rawGas);
-
-            var formattedData = [
-              { name: "Electricity", data: electricityData },
-              { name: "Gas", data: gasData }
-            ];
-
-            Highcharts.chart("energy-chart", {
-              chart: {
-                type: "spline",
-                height: null,
-                width: null,
-                animation: false,
-                spacing: [10, 10, 5, 10],
-                backgroundColor: 'transparent'
-              },
-              title: { text: null },
-              plotOptions: {
-                series: {
-                  animation: false,
-                  enableMouseTracking: false,
-                  states: { hover: { enabled: false } },
-                  marker: { enabled: false }
-                }
-              },
-              series: [{
-                data: formattedData[0].data,
-                lineWidth: 4,
-                color: "#000000",
-                name: formattedData[0].name,
-                zIndex: 2
-              }, {
-                data: formattedData[1].data,
-                lineWidth: 5,
-                name: formattedData[1].name,
-                zIndex: 1,
-                color: {
-                  pattern: {
-                    image: "https://usetrmnl.com/images/grayscale/gray-5.png",
-                    width: 12,
-                    height: 12
-                  }
-                }
-              }],
-              tooltip: { enabled: false },
-              legend: { enabled: false },
-              yAxis: {
-                labels: { style: { fontSize: "16px", color: "#000000" } },
-                gridLineDashStyle: "shortdot",
-                gridLineWidth: 1,
-                gridLineColor: "#000000",
-                tickAmount: 5,
-                title: { text: null }
-              },
-              xAxis: {
-                type: "datetime",
-                labels: { style: { fontSize: "16px", color: "#000000" }, padding: 5, y: 25 },
-                lineWidth: 0,
-                gridLineDashStyle: "dot",
-                tickWidth: 1,
-                tickLength: 0,
-                gridLineWidth: 1,
-                gridLineColor: "#000000",
-                tickPixelInterval: 120,
-                title: { text: null }
-              },
-              credits: { enabled: false }
-            });
-  </script>
+  {% render 'chart_assets' %}
+  {% render 'energy_chart'
+    , id: "energy-chart"
+    , electricity: electricity
+    , gas: gas
+    , variant: "full"
+  %}
 </div>
 <div class="title_bar">
   <img class="image" src="https://usetrmnl.com/images/plugins/weather/wi-lightning.svg">
