--- a/src/quadrant.liquid
+++ b/src/quadrant.liquid
@@ -38,8 +38,4 @@
 
 </div>
 
-<div class="title_bar">
-  <img class="image" src="https://usetrmnl.com/images/plugins/weather/wi-lightning.svg">
-  <span class="title">Frank Energie</span>
-  <span class="instance">Energy Prices</span>
-</div>
+{% render 'title_bar', instance: "Energy Prices" %}
