--- a/src/full.liquid
+++ b/src/full.liquid
@@ -51,13 +51,6 @@
       </div>
     </div>
   <div class="divider"></div>
-
-
-    <!-- Title Bar -->
-    <div class="title_bar">
-      <img class="image" src="https://usetrmnl.com/images/plugins/weather/wi-lightning.svg">
-      <span class="title">Frank Energie</span>
-      <span class="instance">Energy Prices Chart</span>
-    </div>
+    {% render 'title_bar', instance: "Energy Prices" %}
   </body>
 </html>
