--- a/src/shared.liquid
+++ b/src/shared.liquid
@@ -27,6 +27,21 @@
 
 {% comment %}
  =============================================================================
+ COMPONENT: Title Bar
+ usage: {% render 'title_bar', instance: 'Energy Prices' %}
+ =============================================================================
+{% endcomment %}
+
+{% template title_bar %}
+  <div class="title_bar">
+    <img class="image" src="https://usetrmnl.com/images/plugins/weather/wi-lightning.svg">
+    <span class="title">Frank Energie</span>
+    <span class="instance">{{ instance | default: "Energy Prices" }}</span>
+  </div>
+{% endtemplate %}
+
+{% comment %}
+ =============================================================================
  COMPONENT: Price Card (Full View)
  =============================================================================
 {% endcomment %}
